--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,17 @@ img {
 }
 
 #title-box {
-  width: 252px;
-  height: 165px;
+  width: 300px;
+  height: 200px;
   background: rgba(247,211,27,1);
   margin-left: 163px;
   padding-top: 25px;
+}
+#left{
+  text-align: left;
+  font-size: 0.75em;
+}
+#right{
+  text-align: right;
+  font-size: 0.75em;
 }
